[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/assets/btn_exit.png" type="Texture" id=1]
[ext_resource path="res://menus/menu_comparar/Menu_cyd.gd" type="Script" id=2]
[ext_resource path="res://menus/assets/btn_exitpressed.png" type="Texture" id=4]
[ext_resource path="res://win/hg/btn_pressed.png" type="Texture" id=7]
[ext_resource path="res://win/hg/btn_normal.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/winner_hg.tres" type="DynamicFont" id=9]
[ext_resource path="res://menus/assets/menugame.png" type="Texture" id=10]

[node name="Menu_cyd" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="MenuCyd" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -159.5
margin_right = 139.5
margin_bottom = 159.5

[node name="TextureRect" type="TextureRect" parent="MenuCyd"]
margin_left = -2.0
margin_top = -39.0
margin_right = 283.0
margin_bottom = 320.0
texture = ExtResource( 10 )

[node name="btn_exit" type="TextureButton" parent="MenuCyd/TextureRect"]
margin_left = 248.5
margin_top = -9.5
margin_right = 312.5
margin_bottom = 54.5
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )

[node name="Salir" type="TextureButton" parent="MenuCyd/TextureRect"]
margin_left = 32.5
margin_top = 275.5
margin_right = 252.5
margin_bottom = 336.5
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="msc" type="Label" parent="MenuCyd/TextureRect/Salir"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -14.5
margin_right = 28.5
margin_bottom = 14.5
custom_fonts/font = ExtResource( 9 )
text = "Salir"

[node name="sure" type="Label" parent="MenuCyd/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = 61.0
margin_right = 118.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 9 )
text = "¿Seguro que deseas salir?"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCyd/TextureRect"]
margin_left = 30.0
margin_top = 67.0
margin_right = 260.0
margin_bottom = 129.0

[node name="gral" type="Label" parent="MenuCyd/TextureRect/VBoxContainer"]
margin_right = 230.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 9 )
text = "Volumen general"
align = 1

[node name="vGral" type="HSlider" parent="MenuCyd/TextureRect/VBoxContainer"]
margin_top = 27.0
margin_right = 230.0
margin_bottom = 43.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MenuCyd/TextureRect"]
margin_left = 29.0
margin_top = 121.0
margin_right = 258.0
margin_bottom = 183.0

[node name="msc" type="Label" parent="MenuCyd/TextureRect/VBoxContainer2"]
margin_right = 229.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 9 )
text = "Volumen música"
align = 1

[node name="vMusic" type="HSlider" parent="MenuCyd/TextureRect/VBoxContainer2"]
margin_top = 27.0
margin_right = 229.0
margin_bottom = 43.0

[node name="VBoxContainer3" type="VBoxContainer" parent="MenuCyd/TextureRect"]
margin_left = 30.0
margin_top = 178.0
margin_right = 257.0
margin_bottom = 240.0

[node name="effects" type="Label" parent="MenuCyd/TextureRect/VBoxContainer3"]
margin_right = 227.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 9 )
text = "Volumen efectos"
align = 1

[node name="vEffects" type="HSlider" parent="MenuCyd/TextureRect/VBoxContainer3"]
margin_top = 27.0
margin_right = 227.0
margin_bottom = 43.0
